# ecomm-prod-assistant

./: .gitignore  README.md  get_lib_version.py  pyproject.toml  requirements.txt  scrapper_ui.py
data/: product_reviews.csv
notebook/: test.ipynb
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: __init__.py  ragas_eval.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  normal_generation_workflow.py  workflow_class.py
static/: style.css
templates/: chat.html
